<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:id="@+id/uspstoolbar"
        />

    <Button
        android:layout_below="@id/uspstoolbar"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:id="@+id/addUSPS"
        android:text="Add"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addUSPS"
        android:inputType="textMultiLine"
        android:hint="@string/USPSHint"
        android:maxLines="10"
        android:singleLine="false"
        android:scrollbars="none"
        android:id="@+id/trackingEntry"/>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/uspsAddProgress"
        />

</RelativeLayout>
