<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="42dp"
            android:layout_alignRight="@id/entries"
            android:layout_margin="5dp"
            app:icon="@drawable/ic_add_circle_outline_black_24dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp">

        </com.google.android.material.button.MaterialButton>

        <ListView
            android:id="@+id/entries"
            android:layout_below="@id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

</RelativeLayout>
